@@ -24,7 +24,7 @@
         	<exclude module="stax-api"/>
         </dependency>
         <dependency org="mysql" name="mysql-connector-java" rev="5.1.10" conf="default->default"/>
-        <dependency org="org.apache.tools" name="bzip2" rev="20090327" conf="compile->default"/>
+        <dependency org="org.apache.commons" name="commons-compress" rev="1.0" conf="compile->default"/>
         <dependency org="org.postgis" name="postgis" rev="1.3.2" conf="compile->default"/>
         <dependency org="org.springframework" name="spring-jdbc" rev="2.5.6.SEC01" conf="compile->default"/>
         <dependency org="commons-codec" name="commons-codec" rev="1.4" conf="compile->default"/>
